--- a/client/public/index.html
+++ b/client/public/index.html
@@ -18,9 +18,9 @@
       rel="stylesheet"
     />
     <link
+      href="https://stackpath.bootstrapcdn.com/bootswatch/4.3.1/lux/bootstrap.min.css"
       rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
-      integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
+      integrity="sha384-hVpXlpdRmJ+uXGwD5W6HZMnR9ENcKVRn855pPbuI/mwPIEKAuKgTKgGksVGmlAvt"
       crossorigin="anonymous"
     />
     <link
@@ -31,7 +31,7 @@
     />
     <title>Admin Panel</title>
   </head>
-  <body style="min-height:100%">
+  <body class="bg-dark" style="min-height:100%">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <script
